created the work section and the contact section

--- a/index.html
+++ b/index.html
@@ -75,23 +75,120 @@
         </div>
     </section>
 
-    <Section>
-        <div class="cards">
-            <div class="webimages">
-                <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+    <div class="cardcontainer">
+        <section>
+            <div class="cards">
+                <div class="webimages">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
 
-            </div>
-            <div class="title">
-                <h5>Website 1</h5>
+                </div>
+                <div class="title">
+                    <h5>Website 1</h5>
 
-            </div>
-            <div class="description">
-                <h6>Created using html and css</h6>
+                </div>
+                <div class="description">
+                    <h6>Created using html and css</h6>
 
-            </div>
-    </Section>
+                </div>
+        </section>
 
+        <section>
+            <div class="cards">
+                <div class="webimages">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+
+                </div>
+                <div class="title">
+                    <h5>Website 1</h5>
+
+                </div>
+                <div class="description">
+                    <h6>Created using html and css</h6>
+
+                </div>
+        </section>
+
+        <section>
+            <div class="cards">
+                <div class="webimages">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+
+                </div>
+                <div class="title">
+                    <h5>Website 1</h5>
+
+                </div>
+                <div class="description">
+                    <h6>Created using html and css</h6>
+
+                </div>
+        </section>
     </div>
+
+    <div class="cardcontainer">
+        <section>
+            <div class="cards">
+                <div class="webimages">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+
+                </div>
+                <div class="title">
+                    <h5>Website 1</h5>
+
+                </div>
+                <div class="description">
+                    <h6>Created using html and css</h6>
+
+                </div>
+        </section>
+
+        <section>
+            <div class="cards">
+                <div class="webimages">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+
+                </div>
+                <div class="title">
+                    <h5>Website 1</h5>
+
+                </div>
+                <div class="description">
+                    <h6>Created using html and css</h6>
+
+                </div>
+        </section>
+
+        <section>
+            <div class="cards">
+                <div class="webimages">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+
+                </div>
+                <div class="title">
+                    <h5>Website 1</h5>
+
+                </div>
+                <div class="description">
+                    <h6>Created using html and css</h6>
+
+                </div>
+        </section>
+    </div>
+
+    <section class="mywork">
+        <div>
+            <img src="/Assets/Images/line.png" alt="">
+        </div>
+    </section>
+
+    <section class="contactinfo">
+        <div>555-555-5555 gmail@gmail.com Instagram</div>
+    </section>
+
+    <section>
+        <figure class="BackgroundSquares"></figure>
+    </section>
+
 </body>
 
 </html>
