finished up contact me section, added scroll controls, added first portfolio link to work section, finalized website for turn in

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <nav>
         <a href="#AboutMe">About Me</a>
+        <a href="#MyWork">My Work</a>
         <a href="#Contact">Contact</a>
         <a href="Resume">Resume</a>
     </nav>
@@ -20,70 +21,77 @@
         <h1>&lt;Garrett_Gonzales_Coding_Portfolio&gt;</h1>
     </header>
 
-    <figure class="BackgroundSquares"></figure>
+    <figure class="BackgroundSquares" alt="background squares image for design"></figure>
 
     <section class="aboutmesection">
-        <div>
+        <div id="#AboutMe">
             <h2>Hi i'm Garrett,</h2>
             <h3>
-                <p>&nbsp; &nbsp; Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-                    minim veniam, quis nostrud exerci tation
-                    ulla Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                    tincidunt ut laoreet
-                    dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla
-                    Lorem
-                    ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet
-                    dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla
-                    Lorem
-                    ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet
-                    dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla
-                    Lorem.</p>
+                <p>&nbsp; &nbsp; In my current educational journey in the coding world I am with faced with a diverse
+                    range of subjects and skills around all languages of code. Whether it's through formal education or
+                    self-directed study, I’m gaining insights into various fields, including but not limited to HTML,
+                    CSS and Java Script. I am a well-rounded learner with an appetite for comprehending both the
+                    fundamental principles that underpin our world and the cutting-edge developments shaping the future
+                    of code.</p>
 
-                <p>&nbsp; &nbsp; ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                    tincidunt ut laoreet
-                    dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla
-                    Lorem
-                    ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet
-                    dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla
-                    Lorem
-                    ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet
-                    dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla
-                    Lorem
-                    ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet
-                    dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla.
+                <p>&nbsp; &nbsp; Furthermore, as I advance in my learning journey, im more likely acquiring not only
+                    theoretical knowledge but also practical skills. Whether I’m honing problem-solving abilities,
+                    developing critical thinking, or building hands-on expertise in areas of computer sience. I strive
+                    in the commitment to learn and focus on personal growth and intellectual exploration, which will
+                    undoubtedly empower me to make meaningful contributions to society and navigate a dynamic and
+                    complex global landscape.
                 </p>
+
+                <p>&nbsp; &nbsp; As I progress in my learning journey, I'm not only accumulating theoretical knowledge
+                    but also practical skills. Down below, please refer to my work to see my skills in action.</p>
             </h3>
         </div>
-        <img src="/Assets/Images/profilepic.png" alt="" class="profilepic">
+        <img src="/Assets/Images/profilepic.png" alt="profile pic of garrett gonzales in a suit" class="profilepic">
     </section>
 
     <section class="mywork">
         <div>
-            <img src="/Assets/Images/line.png" alt="">
+            <img src="/Assets/Images/line.png" alt="line image for seperating sections">
         </div>
     </section>
 
     <section>
-        <div>
+        <div id="MyWork">
             <h4>My Work</h4>
         </div>
     </section>
 
     <div class="cardcontainer">
         <section>
+            <a class="horiseonHighlight" href="https://garrettgonzo.github.io/Horiseon-Website-Build/">
+                <div class="cards">
+                    <div class="webimages">
+                        <img src="/Assets/Images/horiesonwebsiteimage.jpg"
+                            alt="horieson website screenshot of hom page">
+
+                    </div>
+                    <div class="title">
+                        <h5>Horiseon Wesbsite Design</h5>
+
+                    </div>
+                    <div class="description">
+                        <h6>Created using HTML and CSS. This website was a template for us to use and examine the code
+                            and create
+                            a working URL of the deployed application.</h6>
+
+                    </div>
+            </a>
+        </section>
+
+        <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                        alt="stand in image for when i put new work here">
 
                 </div>
                 <div class="title">
-                    <h5>Website 1</h5>
+                    <h5>Website 2</h5>
 
                 </div>
                 <div class="description">
@@ -95,27 +103,12 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                        alt="stand in image for when i put new work here">
 
                 </div>
                 <div class="title">
-                    <h5>Website 1</h5>
-
-                </div>
-                <div class="description">
-                    <h6>Created using html and css</h6>
-
-                </div>
-        </section>
-
-        <section>
-            <div class="cards">
-                <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
-
-                </div>
-                <div class="title">
-                    <h5>Website 1</h5>
+                    <h5>Website 3</h5>
 
                 </div>
                 <div class="description">
@@ -129,11 +122,12 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                        alt="stand in image for when i put new work here">
 
                 </div>
                 <div class="title">
-                    <h5>Website 1</h5>
+                    <h5>Website 4</h5>
 
                 </div>
                 <div class="description">
@@ -145,11 +139,12 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                        alt="stand in image for when i put new work here">
 
                 </div>
                 <div class="title">
-                    <h5>Website 1</h5>
+                    <h5>Website 5</h5>
 
                 </div>
                 <div class="description">
@@ -161,11 +156,12 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png">
+                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                        alt="stand in image for when i put new work here">
 
                 </div>
                 <div class="title">
-                    <h5>Website 1</h5>
+                    <h5>Website </h5>
 
                 </div>
                 <div class="description">
@@ -177,16 +173,24 @@
 
     <section class="mywork">
         <div>
-            <img src="/Assets/Images/line.png" alt="">
+            <img src="/Assets/Images/line.png" alt="line image for seperating sections">
+        </div>
+    </section>
+
+    <section>
+        <div id="Contact">
+            <h4>Contact Me</h4>
         </div>
     </section>
 
     <section class="contactinfo">
-        <div>555-555-5555 gmail@gmail.com Instagram</div>
+        <div>
+            714-273-0641&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gggonzo4@yahoo.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Instagram
+        </div>
     </section>
 
     <section>
-        <figure class="BackgroundSquares"></figure>
+        <figure class="BackgroundSquares" alt="background squares image for design"></figure>
     </section>
 
 </body>
