had an error with the css not linking up in github pages, attempting to fix

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     but also practical skills. Down below, please refer to my work to see my skills in action.</p>
             </h3>
         </div>
-        <img src="/Assets/Images/profilepic.png" alt="profile pic of garrett gonzales in a suit" class="profilepic">
+        <img src="./Assets/Images/profilepic.png" alt="profile pic of garrett gonzales in a suit" class="profilepic">
     </section>
 
     <section class="mywork">
