had an error with the css images not linking up, attempting to fix

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section class="mywork">
         <div>
-            <img src="/Assets/Images/line.png" alt="line image for seperating sections">
+            <img src="./Assets/Images/line.png" alt="line image for seperating sections">
         </div>
     </section>
 
@@ -65,7 +65,7 @@
             <a class="horiseonHighlight" href="https://garrettgonzo.github.io/Horiseon-Website-Build/">
                 <div class="cards">
                     <div class="webimages">
-                        <img src="/Assets/Images/horiesonwebsiteimage.jpg"
+                        <img src="./Assets/Images/horiesonwebsiteimage.jpg"
                             alt="horieson website screenshot of hom page">
 
                     </div>
@@ -85,7 +85,7 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                    <img src="./Assets/Images/GarrettG_Enviro_Final (1).png"
                         alt="stand in image for when i put new work here">
 
                 </div>
@@ -102,7 +102,7 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                    <img src="./Assets/Images/GarrettG_Enviro_Final (1).png"
                         alt="stand in image for when i put new work here">
 
                 </div>
@@ -121,7 +121,7 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                    <img src="./Assets/Images/GarrettG_Enviro_Final (1).png"
                         alt="stand in image for when i put new work here">
 
                 </div>
@@ -138,7 +138,7 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                    <img src="./Assets/Images/GarrettG_Enviro_Final (1).png"
                         alt="stand in image for when i put new work here">
 
                 </div>
@@ -155,7 +155,7 @@
         <section>
             <div class="cards">
                 <div class="webimages">
-                    <img src="/Assets/Images/GarrettG_Enviro_Final (1).png"
+                    <img src="./Assets/Images/GarrettG_Enviro_Final (1).png"
                         alt="stand in image for when i put new work here">
 
                 </div>
@@ -172,7 +172,7 @@
 
     <section class="mywork">
         <div>
-            <img src="/Assets/Images/line.png" alt="line image for seperating sections">
+            <img src="./Assets/Images/line.png" alt="line image for seperating sections">
         </div>
     </section>
 
